--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://icon-library.com/images/chat-app-icon/chat-app-icon-24.jpg"
+    />
     <title>React App</title>
   </head>
   <body>
