added preloader, fixed some bugs and changed some css

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       type="image/x-icon"
       href="https://icon-library.com/images/chat-app-icon/chat-app-icon-24.jpg"
     />
+    <script src="https://kit.fontawesome.com/a1c6e53237.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
